--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "express-useragent": "^1.0.12",
     "fingerprintjs2": "^2.0.6",
+    "isomorphic-fetch": "^2.2.1",
     "next": "^8.0.4",
     "nookies": "^2.0.4",
     "react": "^16.8.6",
