--- a/fe/package.json
+++ b/fe/package.json
@@ -9,11 +9,13 @@
     "express": "^4.16.4",
     "express-useragent": "^1.0.12",
     "fingerprintjs2": "^2.0.6",
+    "form-data": "^2.3.3",
     "isomorphic-fetch": "^2.2.1",
     "next": "^8.0.4",
     "nookies": "^2.0.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "reaptcha": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
