--- a/fe/package.json
+++ b/fe/package.json
@@ -13,6 +13,7 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^8.0.4",
     "nookies": "^2.0.4",
+    "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "reaptcha": "^1.4.2"
