--- a/fe/package.json
+++ b/fe/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -11,9 +12,11 @@
     "fingerprintjs2": "^2.0.6",
     "form-data": "^2.3.3",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.3.1",
     "next": "^8.0.4",
     "nookies": "^2.0.4",
     "nprogress": "^0.2.0",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "reaptcha": "^1.4.2"
