--- a/fe/package.json
+++ b/fe/package.json
@@ -19,6 +19,7 @@
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.0.6",
     "reaptcha": "^1.4.2"
   },
   "devDependencies": {},
