Final before release adjustments

--- a/fe/dispatch.yaml
+++ b/fe/dispatch.yaml
@@ -1,3 +1,6 @@
 dispatch:
-  - url: "*.pilahpilihpilpres.id/*"
+  - url: "pilahpilihpilpres.com/*"
     service: survey
+  - url: "www.pilahpilihpilpres.com/*"
+    service: survey
+
