--- a/fe/package.json
+++ b/fe/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -19,7 +20,7 @@
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-markdown": "^4.0.6",
+    "react-markdown": "^4.0.8",
     "reaptcha": "^1.4.2"
   },
   "devDependencies": {},
